samples/_failures_safe/1761459019_d4ca1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b36af49.c: In function ‘main’:
./samples/SAFE/__tmp_0b36af49.c:156:5: error: expected expression at end of input
  156 |     if (!state_machine_handle_event(&sm,
      |     ^~
./samples/SAFE/__tmp_0b36af49.c:156:5: error: expected declaration or statement at end of input
